--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,13 @@
 
     <string name="signin">Sign In</string>
     <string name="forgot">Forgot password?</string>
-    <string name="register">Register here...</string>
+    <string name="register">Register here&#8230;</string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <!-- Blog Configurations -->
+    <string name="title_home">Home</string>
+    <string name="my_blogs">My Blogs</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
