Added preference fragment and floating button(non-actionable)
Previous left-fragment: PreferenceFragment
Button: FloatingActionButton(non-working)
Subs: Added indentation(reduction for margins)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title_activity_main">MainActivity</string>
 
     <!-- Navigation Bar -->
+    <string name="preference">Preference</string>
     <string name="title_home">Home</string>
     <string name="my_blogs">My Blogs</string>
     <string name="profile">Profile</string>
